# os-download

./: .gitignore  LICENSE  README.md  download_manager.py  go.mod  main.go  os_download_finder.py  pyproject.toml
os-links/: all_os.txt  os.txt
