[project]
name = "os-download"
version = "0.1.0"
description = "Find and download OS ISO images (Ubuntu, Debian, TrueNAS, OPNsense, and more)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
os-finder = "os_download_finder:main"
os-download = "download_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "os_download_finder.py",
    "download_manager.py",
]
